@@ -1,12 +1,15 @@
 package org.activiti.cloud.query.controller;
 
 import com.querydsl.core.types.Predicate;
+import com.querydsl.core.types.dsl.BooleanExpression;
 import org.activiti.api.runtime.shared.security.SecurityManager;
 import org.activiti.api.task.model.Task;
+import org.activiti.cloud.query.AbpmTaskRepository;
 import org.activiti.cloud.services.query.app.repository.EntityFinder;
 import org.activiti.cloud.services.query.app.repository.ProcessDefinitionRepository;
 import org.activiti.cloud.services.query.app.repository.TaskRepository;
 import org.activiti.cloud.services.query.app.repository.TaskVariableRepository;
+import org.activiti.cloud.services.query.model.QTaskEntity;
 import org.activiti.cloud.services.query.model.TaskEntity;
 import org.activiti.cloud.services.query.model.TaskVariableEntity;
 import org.activiti.cloud.services.security.ActivitiForbiddenException;
@@ -24,7 +27,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.hateoas.MediaTypes;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -36,7 +39,7 @@ import java.util.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -52,7 +55,7 @@ public class CustomControllerTest {
     private MockMvc mockMvc;
 
     @MockBean
-    private TaskRepository taskRepository;
+    private AbpmTaskRepository abpmTaskRepository;
 
     @MockBean
     private TaskVariableRepository variableRepository;
@@ -76,8 +79,8 @@ public class CustomControllerTest {
     private SecurityPoliciesProperties securityPoliciesProperties;
 
     @Before
+    @DirtiesContext
     public void setUp() {
-        assertThat(taskRepository).isNotNull();
         assertThat(variableRepository).isNotNull();
         assertThat(entityFinder).isNotNull();
         assertThat(taskLookupRestrictionService).isNotNull();
@@ -85,77 +88,23 @@ public class CustomControllerTest {
         assertThat(securityPoliciesManager).isNotNull();
         assertThat(processDefinitionRepository).isNotNull();
         assertThat(securityPoliciesProperties).isNotNull();
+        assertThat(abpmTaskRepository).isNotNull();
     }
 
     @Test
-    public void testABPMNendpoint() throws Exception {
-
-        //when
-        MvcResult result = mockMvc.perform(get("/abpm/test"))
-                .andReturn();
-
-        assertThat(result.getResponse().getContentAsString()).isEqualTo("Greetings from Spring Boot!");
-    }
-
-    @Test
-    public void taskFinderTest() throws Exception {
-        //given
-        TaskEntity taskEntity = buildDefaultTask();
-        given(entityFinder.findById(eq(taskRepository),
-                eq(taskEntity.getId()),
-                anyString()))
-                .willReturn(taskEntity);
-
-        Predicate restrictionPredicate = mock(Predicate.class);
-        given(taskLookupRestrictionService.restrictTaskQuery(any())).willReturn(restrictionPredicate);
-        given(taskRepository.findAll(restrictionPredicate)).willReturn(Collections.singletonList(taskEntity));
-
-        //when
-        MvcResult mvcResult = mockMvc.perform(get("/abpm/{taskId}",
-                taskEntity.getId()).accept(MediaType.APPLICATION_JSON_VALUE))
-                //then
-                .andExpect(status().isOk())
-                .andReturn();
-
-        assertThat(mvcResult).isNotNull();
-    }
-
-    @Test
-    public void taskFinderTaskPaged() throws Exception {
+    public void allTaskFinderWithoutStatus() throws Exception {
         //given
 
-        PageRequest pageRequest = PageRequest.of(1,10);
+        PageRequest pageRequest = PageRequest.of(1,100);
 
-        TaskEntity taskEntity = buildDefaultTask();
+        TaskEntity taskEntity1 = buildDefaultTaskSimpleId("123456", Task.TaskStatus.ASSIGNED);
+        TaskEntity taskEntity2 = buildDefaultTaskSimpleId("654321", null);
 
-        given(taskRepository.findAll(any(), eq(pageRequest)))
-                .willReturn(new PageImpl<>(Collections.singletonList(taskEntity), pageRequest, 11));
-
-        //when
-        MvcResult mvcResult = mockMvc.perform(get("/abpm/{taskId}/new?page=1&size=10",
-                taskEntity.getId())
-                .accept(MediaTypes.HAL_JSON_VALUE))
-                //then
-                .andExpect(status().isOk())
-                .andReturn();
-
-        assertThat(mvcResult).isNotNull();
-    }
-
-    @Test
-    public void taskFinder() throws Exception {
-        //given
-
-        PageRequest pageRequest = PageRequest.of(1,10);
-
-        TaskEntity taskEntity1 = buildDefaultTask();
-        TaskEntity taskEntity2 = buildDefaultTask();
-
-        given(taskRepository.findAll(any(), eq(pageRequest)))
+        given(abpmTaskRepository.findAll(QTaskEntity.taskEntity.status.eq(Task.TaskStatus.ASSIGNED), eq(pageRequest)))
                 .willReturn(new PageImpl<>(List.of(taskEntity1, taskEntity2), pageRequest, 11));
 
         //when
-        MvcResult mvcResult = mockMvc.perform(get("/abpm/tasks?page=1&size=10")
+        MvcResult mvcResult = mockMvc.perform(get("/abpm/allcases?page=1&size=100")
                 .accept(MediaTypes.HAL_JSON_VALUE))
                 //then
                 .andExpect(status().isOk())
@@ -165,29 +114,29 @@ public class CustomControllerTest {
     }
 
     @Test
-    public void variableFinderTest() throws Exception {
+    public void allTaskFinder() throws Exception {
         //given
-        PageRequest pageRequest = PageRequest.of(1,10);
 
-        TaskVariableEntity variableEntity = buildVariable(1L);
+        PageRequest pageRequest = PageRequest.of(1,100);
 
-        given(variableRepository.findAll(any(), eq(pageRequest)))
-                .willReturn(new PageImpl<>(Collections.singletonList(variableEntity), pageRequest, 11));
+        TaskEntity taskEntity1 = buildDefaultTaskSimpleId("123456", Task.TaskStatus.ASSIGNED);
+        TaskEntity taskEntity2 = buildDefaultTaskSimpleId("654321", null);
+
+        when(abpmTaskRepository.findAll(any(), eq(pageRequest)))
+                .thenReturn(new PageImpl<>(List.of(taskEntity1, taskEntity2), pageRequest, 11));
 
         //when
-        MvcResult mvcResult = mockMvc.perform(get("/abpm/{taskId}/variables?page=1&size=10",
-                variableEntity.getTaskId())
+        MvcResult mvcResult = mockMvc.perform(get("/abpm/allcases?page=1&size=100")
                 .accept(MediaTypes.HAL_JSON_VALUE))
                 //then
                 .andExpect(status().isOk())
                 .andReturn();
 
         assertThat(mvcResult).isNotNull();
-
     }
 
     private TaskEntity buildDefaultTask() {
-        return new TaskEntity(UUID.randomUUID().toString(),
+        TaskEntity taskEntity = new TaskEntity(UUID.randomUUID().toString(),
                 "john",
                 "Review",
                 "Review the report",
@@ -208,10 +157,49 @@ public class CustomControllerTest {
                 null,
                 "aFormKey"
         );
+
+        Set<TaskVariableEntity> taskVariableEntity = new HashSet<>();
+        taskVariableEntity.add(buildVariable(1L));
+        taskEntity.setVariables(taskVariableEntity);
+
+        return taskEntity;
+    }
+
+    private TaskEntity buildDefaultTaskSimpleId(String number, Task.TaskStatus status) {
+        TaskEntity taskEntity = new TaskEntity(
+                number,
+                "john",
+                "Review",
+                "Review the report",
+                new Date(),
+                new Date(),
+                20,
+                number,
+                number,
+                "My app",
+                "My app",
+                "1",
+                null,
+                null,
+                status,
+                new Date(),
+                new Date(),
+                "peter",
+                null,
+                "aFormKey"
+        );
+
+        Set<TaskVariableEntity> taskVariableEntity = new HashSet<>();
+        taskVariableEntity.add(buildVariableSimpleId(123456L));
+        taskVariableEntity.add(buildVariableSimpleId(654321L));
+        taskEntity.setVariables(taskVariableEntity);
+
+        return taskEntity;
     }
 
     private TaskVariableEntity buildVariable(Long id) {
-        TaskVariableEntity variableEntity = new TaskVariableEntity(id,
+        TaskVariableEntity variableEntity = new TaskVariableEntity(
+                id,
                 String.class.getName(),
                 "firstName",
                 UUID.randomUUID().toString(),
@@ -224,6 +212,25 @@ public class CustomControllerTest {
                 new Date(),
                 new Date(),
                 UUID.randomUUID().toString());
+        variableEntity.setValue("John");
+        return variableEntity;
+    }
+
+    private TaskVariableEntity buildVariableSimpleId(Long id) {
+        TaskVariableEntity variableEntity = new TaskVariableEntity(
+                id,
+                String.class.getName(),
+                "firstName",
+                id.toString(),
+                "My app",
+                "My app",
+                "1",
+                null,
+                null,
+                id.toString(),
+                new Date(),
+                new Date(),
+                id.toString());
         variableEntity.setValue("John");
         return variableEntity;
     }
